--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "path": "^0.12.7",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "recharts": "^1.4.3",
+    "request": "^2.88.0",
+    "unix-timestamp": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
