--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.3",
     "recharts": "^1.4.3",
     "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "unix-timestamp": "^0.2.0"
   },
   "scripts": {
